--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -9,7 +9,7 @@
                 </span>
             </b>
             <span fxShow="false" fxShow.gt-xs>
-                Cafe Management System
+                My Home Store
             </span>
         </div>
         <span fxFlex></span>
