--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,12 +4,12 @@
 <div class="wrapper sticky">
   <nav class="navbar-fixed-top">
     <a href="#" class="logo">
-      <mat-icon>storefront</mat-icon> Cafe Management System
+      <mat-icon>storefront</mat-icon> My Home Store
     </a>
     <ul>
     </ul>
   </nav>
 </div>
 <div class="footer" id="signup">
-  <h2>All right reserved @BTech Days</h2>
+  <h2>All right reserved @Nguyễn Quốc Việt</h2>
 </div>
