--- a/src/app/best-seller/best-seller.component.html
+++ b/src/app/best-seller/best-seller.component.html
@@ -1,22 +1,21 @@
 <div style="margin-top: 20px;">
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase">Best Seller</h2>
+            <h2 class="section-heading text-uppercase">Gian hàng của tôi</h2>
         </div>
         <ul class="timeline">
-            <li><a href="../../assets/img/1.jpg" target="_blank">
-                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="../../assets/img/1.jpg"
+            <li><a href="../../assets/img/1.png" target="_blank">
+                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="../../assets/img/1.png"
                             alt="..." /></div>
                 </a>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>Pizza</h4>
+                        <h4>Wake Up 247</h4>
                     </div>
                     <div class="timeline-body">
-                        <p class="text-muted">Pizza is an Italian dish consisting of a usually round, flattened base of
-                            leavened wheat-based dough topped with tomatoes, cheese, and often various other
-                            ingredients, which is then baked at a high temperature, traditionally in a wood-fired oven.
-                            A small pizza is sometimes called a pizzetta.</p>
+                        <p class="text-muted">Nước tăng lực Wake Up 247 vị cà phê 330ml có mùi vị thơm
+                            ngon, sảng khoái cùng hương cà phê thơm dễ chịu. Sản phẩm nước uống tăng lực chính hãng từ
+                            thương hiệu Wake up 247</p>
                     </div>
                 </div>
             </li>
@@ -74,8 +73,6 @@
                         Be Part
                         <br />
                         Of Our
-                        <br />
-                        Cafe!
                     </h4>
                 </div>
             </li>
