--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -9,7 +9,7 @@
                 </span>
             </b>
             <span fxShow="false" fxShow.gt-xs>
-                My Home Store
+                VietNQ
             </span>
         </div>
         <span fxFlex></span>
