--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -59,6 +59,7 @@ $danger: #fc4b6c;
 $success: #26c6da;
 $warning: #ffb22b;
 $primary: #7460ee;
+$hienttt:#00FFFF;
 $info: #7b1fa2;
 // $inverse: #2f3d4a;
 $inverse: white;
