--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,9 @@
       <mat-icon>storefront</mat-icon> My Home Store
     </a>
     <ul>
+      <li>
+        <a (click)="handleSignupAction()">Signup</a>
+      </li>
     </ul>
   </nav>
 </div>
