--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,11 +8,12 @@
     </a>
     <ul>
       <li>
-        <a (click)="handleSignupAction()">Signup</a>
+        <a (click)="handleLoginAction()">Đăng nhập</a>
+        <a (click)="handleSignupAction()">Đăng ký</a>
       </li>
     </ul>
   </nav>
 </div>
 <div class="footer" id="signup">
-  <h2>All right reserved @Nguyễn Quốc Việt</h2>
+  <h2>All right reserved Quốc Việt</h2>
 </div>
