--- a/src/app/material-component/dialog/confirmation/confirmation.component.html
+++ b/src/app/material-component/dialog/confirmation/confirmation.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar color="primary">
+<mat-toolbar style="background-color: darkturquoise;">
     <mat-toolbar-row fxLayout="row">
-        <span>Xác nhận</span>
-        <span class="spancer"></span>
+        <span style="color: red;">Xác nhận</span>
+        <span class="spacer"></span>
         <button class="mat-dialog-close" mat-icon-button mat-dialog-close>
-            <mat-icon>close</mat-icon>
+            <mat-icon style="color: red;">close</mat-icon>
         </button>
     </mat-toolbar-row>
 </mat-toolbar>
