--- a/src/app/material-component/dialog/confirmation/confirmation.component.html
+++ b/src/app/material-component/dialog/confirmation/confirmation.component.html
@@ -8,12 +8,13 @@
     </mat-toolbar-row>
 </mat-toolbar>
 
-<mat-dialog-content class="mat-typography">
-    <h6>Bạn có chắc muốn {{details.message}}</h6>
+<mat-dialog-content class="mat-typograpy" style="font-size: 18px;">
+    <h6 style="font-size: 18px; margin-top: 10px;">Bạn có chắc muốn {{details.message}}</h6>
 </mat-dialog-content>
 
+
 <mat-dialog-actions align="end">
-    <button mat-raised-button color="primary" (click)="handleChangeAction()">
-        <mat-icon>check_circle</mat-icon> Đồng ý
+    <button mat-raised-button color="primary" type="submit" (click)="handleChangeAction()" >
+        <mat-icon>save</mat-icon>Đăng xuất
     </button>
 </mat-dialog-actions>
