--- a/src/app/material-component/dialog/confirmation/confirmation.component.scss
+++ b/src/app/material-component/dialog/confirmation/confirmation.component.scss
@@ -3,6 +3,11 @@
     font-weight: 400;
 }
 
+.mat-typography h6 {
+    font-size: 18px;
+    font-weight: 400;
+}
+
 .mat-toolbar {
     margin: -24px;
     margin-bottom: 10px;
