--- a/src/app/material-component/dialog/confirmation/confirmation.component.html
+++ b/src/app/material-component/dialog/confirmation/confirmation.component.html
@@ -15,6 +15,6 @@
 
 <mat-dialog-actions align="end">
     <button mat-raised-button color="primary" type="submit" (click)="handleChangeAction()" >
-        <mat-icon>save</mat-icon>Đăng xuất
+        <mat-icon>save</mat-icon>Xác nhận
     </button>
 </mat-dialog-actions>
