--- a/src/app/material-component/view-bill/view-bill.component.html
+++ b/src/app/material-component/view-bill/view-bill.component.html
@@ -47,12 +47,12 @@
 
                 </button>
 
-                <button mat-icon-button color="primary" matTooltip="Tải xuống" (click)="handleViewAction(element)">
-                    <mat-icon>summarrize</mat-icon>
+                <button mat-icon-button color="primary" matTooltip="Tải hóa đơn" (click)="handleDowloadAction(element)">
+                    <mat-icon>summarize</mat-icon>
 
                 </button>
 
-                <button mat-icon-button color="primary" matTooltip="Xóa" (click)="handleViewAction(element)">
+                <button mat-icon-button color="primary" matTooltip="Xóa" (click)="handleDeleteAction(element)">
                     <mat-icon>delete</mat-icon>
 
                 </button>
