--- a/src/app/material-component/dialog/view-bill-products/view-bill-products.component.html
+++ b/src/app/material-component/dialog/view-bill-products/view-bill-products.component.html
@@ -1,1 +1,54 @@
-<div>test   </div>
+<mat-toolbar style="background-color: darkturquoise;">
+    <mat-toolbar-row fxLayout="row">
+        <span>Thông tin hóa đơn</span>
+        <span class="spacer"></span>
+        <button class="mat-dialog-close" mat-icon-button mat-dialog-close>
+            <mat-icon style="color: red;">close</mat-icon>
+        </button>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-dialog-content class="mat-typography">
+    <table id="customers">
+        <tr>
+            <td><b>Tên khách hàng:</b>{{data?.name}}</td>
+            <td><b>Email:</b>{{data?.email}}</td>
+        </tr>
+        <tr>
+            <td><b>Số điện thoại:</b>{{data?.contactNumber}}</td>
+            <td><b>Phương thức thanh toán:</b>{{data?.paymentMethod}}</td>
+        </tr>
+    </table>
+</mat-dialog-content>
+
+<div class="responsive_table">
+    <br>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-28">
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Tên</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef>Danh mục</th>
+            <td mat-cell *matCellDef="let element">{{element.category}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef>Giá</th>
+            <td mat-cell *matCellDef="let element">{{element.price}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="quantity">
+            <th mat-header-cell *matHeaderCellDef>Số lượng</th>
+            <td mat-cell *matCellDef="let element">{{element.quantity}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="total">
+            <th mat-header-cell *matHeaderCellDef>Tổng cộng</th>
+            <td mat-cell *matCellDef="let element">{{element.total}}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayColumns;sticky:true"></tr>
+        <tr mat-row *matRowDef="let row; columns:displayColumns;"></tr>
+    </table>
+</div>
