--- a/src/app/material-component/view-bill/view-bill.component.html
+++ b/src/app/material-component/view-bill/view-bill.component.html
@@ -12,7 +12,7 @@
 </mat-card>
 <hr>
 
-<div>
+<div class="responsive_table">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Tên</th>
