--- a/src/app/material-component/user/user.component.html
+++ b/src/app/material-component/user/user.component.html
@@ -33,8 +33,11 @@
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef>Tác động</th>
             <td mat-cell *matCellDef="let element" class="action-link">
+                <button mat-icon-button color="primary" matTooltip="Sửa" (click)="handleDelete(element)">
+                    <mat-icon>delete</mat-icon>
+                </button>
                 <mat-slide-toggle (change)="onChange($event.checked,element.id)" matTooltip="Activate or Deactivate"
-                 [checked]="element.status"></mat-slide-toggle>
+                    [checked]="element.status"></mat-slide-toggle>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky:true"></tr>
