--- a/src/app/material-component/user/user.component.html
+++ b/src/app/material-component/user/user.component.html
@@ -33,7 +33,10 @@
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef>Tác động</th>
             <td mat-cell *matCellDef="let element" class="action-link">
-                <button mat-icon-button color="primary" matTooltip="Sửa" (click)="handleDelete(element)">
+                <button mat-icon-button color="primary" matTooltip="Sửa" (click)="handleEdit(element)">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" matTooltip="Xóa" (click)="handleDelete(element)">
                     <mat-icon>delete</mat-icon>
                 </button>
                 <mat-slide-toggle (change)="onChange($event.checked,element.id)" matTooltip="Activate or Deactivate"
