--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -33,5 +33,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="column">
+            <div class="card">
+                <div class="container">
+                    <h2 class="title">Tổng số người dùng:</h2>
+                    <h1 class="title">{{data?.user}}</h1>
+                    <p><button class="button" [routerLink]="['/vietnq/user']">Xem người dùng</button></p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
