--- a/src/app/material-component/upload-image/upload-image.component.html
+++ b/src/app/material-component/upload-image/upload-image.component.html
@@ -1,21 +1,45 @@
-<div class="text-center"> 
-	<input class="form-control" type="file"
-			(change)="onFileChange($event)"> 
+<button mat-flat-button color="primary" (click)="uploadImage()" class="float-right">
+  Thêm mới</button>
 
-	<button (click)="uploadImage()" 
-		class="btn btn-success"> 
-		Upload 
-	</button> 
-</div> 
+<div class="text-center">
+  <input class="form-control" type="file" (change)="onFileChange($event)">
+</div>
 
-<!-- Shareable short link of uploaded file -->
-<div class="container text-center jumbotron"
-	*ngIf="shortLink"> 
-	<h2> Visit Here</h2> 
-	<a href="{{shortLink}}">{{shortLink}}</a> 
-</div> 
+<mat-dialog-content class="mat-typography">
+  <div fxFlex fxLayout="column">
+    <div fxLayout="row wrap">
 
-<!--Flag variable is used here-->
-<div class="container" > 
-	<h3>Loading ...</h3> 
-</div> 
+      <mat-form-field appearance="standard" fxFlex>
+        <mat-label>Tên sản phẩm</mat-label>
+        <input matInput [(ngModel)]="name" #nameInput="ngModel" name="name" required maxlength="50">
+        <mat-error *ngIf="nameInput.invalid && (nameInput.dirty || nameInput.touched)">
+          <ng-container *ngIf="nameInput.hasError('required')">
+            Tên sản phẩm không được để trống
+          </ng-container>
+          <ng-container *ngIf="nameInput.hasError('maxlength')">
+            Tên sản phẩm không được vượt quá 1024 ký tự
+          </ng-container>
+        </mat-error>
+      </mat-form-field>
+
+    </div>
+
+    <div fxLayout="row wrap">
+
+      <mat-form-field appearance="standard" fxFlex>
+        <mat-label>Mô tả</mat-label>
+        <textarea matInput [(ngModel)]="description" #descriptionInput="ngModel" name="description" required
+          maxlength="1024"></textarea>
+        <mat-error *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)">
+          <ng-container *ngIf="descriptionInput.hasError('required')">
+            Mô tả sản phẩm không được để trống
+          </ng-container>
+          <ng-container *ngIf="descriptionInput.hasError('maxlength')">
+            Mô tả sản phẩm không được vượt quá 1024 ký tự
+          </ng-container>
+        </mat-error>
+      </mat-form-field>
+
+    </div>
+  </div>
+</mat-dialog-content>
