--- a/src/app/material-component/image/image.component.html
+++ b/src/app/material-component/image/image.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let image of imageDatas">
+<div *ngFor="let image of imageData">
     <h2>{{ image.name }}</h2>
     <p>{{ image.description }}</p>
     <img [src]="image.file" alt="{{ image.fileName }}">
