--- a/src/app/material-component/product/product.component.html
+++ b/src/app/material-component/product/product.component.html
@@ -43,7 +43,7 @@
                     <mat-icon>edit</mat-icon>
                 </button>
 
-                <button mat-icon-button color="primary" matTooltip="Sửa" (click)="handleDelete(element)">
+                <button mat-icon-button color="primary" matTooltip="Xóa" (click)="handleDelete(element)">
                     <mat-icon>delete</mat-icon>
                 </button>
 
