--- a/src/app/material-component/dialog/upload-image/upload-image.component.html
+++ b/src/app/material-component/dialog/upload-image/upload-image.component.html
@@ -1,14 +1,20 @@
-<button mat-flat-button color="primary" (click)="uploadImage()" class="float-right">
-  Thêm mới</button>
-
-<div class="text-center">
-  <input class="form-control" type="file" (change)="onFileChange($event)">
-</div>
+<mat-toolbar style="background-color: darkturquoise;">
+  <mat-toolbar-row fxLayout="row">
+    <span style="color: red;">Thêm mới hình ảnh</span>
+    <span class="spacer"></span>
+    <button class="mat-dialog-close" mat-icon-button mat-dialog-close>
+      <mat-icon style="color: red;">close</mat-icon>
+    </button>
+  </mat-toolbar-row>
+</mat-toolbar>
 
 <mat-dialog-content class="mat-typography">
+  <div class="text-center">
+    <input class="form-control" type="file" (change)="onFileChange($event)">
+    <img *ngIf="imageUrl" [src]="imageUrl" alt="Preview">
+  </div>
   <div fxFlex fxLayout="column">
     <div fxLayout="row wrap">
-
       <mat-form-field appearance="standard" fxFlex>
         <mat-label>Tên sản phẩm</mat-label>
         <input matInput [(ngModel)]="name" #nameInput="ngModel" name="name" required maxlength="50">
@@ -43,3 +49,13 @@
     </div>
   </div>
 </mat-dialog-content>
+
+<mat-dialog-actions align="end">
+  <button mat-flat-button color="primary" (click)="uploadImage()" class="float-right">
+    <mat-icon>save</mat-icon> Xác nhận</button>
+
+  <button mat-raised-button style="background-color: red;" mat-dialog-close>
+    <mat-icon>cancel</mat-icon>Hủy
+  </button>
+
+</mat-dialog-actions>
