--- a/src/app/material-component/dialog/upload-image/upload-image.component.scss
+++ b/src/app/material-component/dialog/upload-image/upload-image.component.scss
@@ -9,3 +9,13 @@ mat-card {
 table {
     width: 100%;
 }
+
+.mat-toolbar {
+    margin: -24px;
+    width: auto;
+    margin-bottom: 10px;
+}
+
+mat-form-field {
+    padding: 5px;
+}
