--- a/src/app/material-component/dialog/upload-image/upload-image.component.html
+++ b/src/app/material-component/dialog/upload-image/upload-image.component.html
@@ -11,7 +11,7 @@
 <mat-dialog-content class="mat-typography">
   <div class="text-center">
     <input class="form-control" type="file" (change)="onFileChange($event)">
-    <img *ngIf="imageUrl" [src]="imageUrl" alt="Preview">
+    <!-- <img *ngIf="imageUrl" [src]="imageUrl" alt="Preview"> -->
   </div>
   <div fxFlex fxLayout="column">
     <div fxLayout="row wrap">
