--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -43,5 +43,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="column">
+            <div class="card">
+                <div class="container">
+                    <h2 class="title">Tổng số hàng nổi bật:</h2>
+                    <h1 class="title">{{data?.image}}</h1>
+                    <p><button class="button" [routerLink]="['/vietnq/image']">Xem hàng nổi bật</button></p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
