--- a/src/app/material-component/dialog/upload-image/upload-image.component.scss
+++ b/src/app/material-component/dialog/upload-image/upload-image.component.scss
@@ -19,3 +19,39 @@ table {
 mat-form-field {
     padding: 5px;
 }
+
+
+.img-preview {
+    max-width: 100%;
+    max-height: 100px; 
+    margin-top: 10px;
+    margin-left: 8%;
+}
+
+.file-name {
+    margin-top: 5px; 
+}
+
+.tooltip {
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer; 
+}
+
+.img-container {
+    position: relative;
+    display: inline-block;
+}
+
+.delete-button {
+    position: absolute;
+    top: 8px;
+    right: 28px;
+    background: none;
+    border: none;
+    color: red;
+    font-size: 16px;
+    cursor: pointer;
+}
+
