--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -1,6 +1,15 @@
-<button [matMenuTriggerFor]="profile" mat-icon-button class="m-r-5">
+<div style="display: flex; justify-content: center; align-items: center;">
+    <div *ngIf="user" style="margin-right: 10px;">
+        {{user.name}}
+    </div>
     <mat-icon>account_circle</mat-icon>
-</button>
+    <button mat-icon-button class="m-r-5" style="cursor: pointer;">
+    <mat-icon [matMenuTriggerFor]="profile" style="margin-right: 10px;">touch_app</mat-icon>
+    </button>
+</div>
+
+
+
 <mat-menu #profile="matMenu" class="mymegamenu">
     <button mat-menu-item (click)="changePassword()">
         <mat-icon>password</mat-icon>Đổi mật khẩu
@@ -9,4 +18,7 @@
     <button mat-menu-item (click)="logout()">
         <mat-icon>exit_to_app</mat-icon>Đăng xuất
     </button>
+    <mat-option *ngFor="let user">
+        {{user.name}}
+    </mat-option>
 </mat-menu>
