--- a/src/app/material-component/view-bill/view-bill.component.html
+++ b/src/app/material-component/view-bill/view-bill.component.html
@@ -48,7 +48,7 @@
                 </button>
 
                 <button mat-icon-button color="primary" matTooltip="Tải hóa đơn" (click)="handleDowloadAction(element)">
-                    <mat-icon>summarize</mat-icon>
+                    <mat-icon>get_app</mat-icon>
 
                 </button>
 
