--- a/src/app/material-component/category/category.component.html
+++ b/src/app/material-component/category/category.component.html
@@ -26,6 +26,8 @@
                 <button mat-icon-button color="primary" matTooltip="Sửa" (click)="handleEdit(element)">
                     <mat-icon>edit</mat-icon>
                 </button>
+                <mat-slide-toggle (change)="onChange($event.checked,element.id)" matTooltip="Còn hàng hoặc không còn hàng"
+                    [checked]="element.status"></mat-slide-toggle>
             </td>
         </ng-container>
 
