--- a/src/app/material-component/user/user.component.html
+++ b/src/app/material-component/user/user.component.html
@@ -21,13 +21,18 @@
         </ng-container>
 
         <ng-container matColumnDef="userName">
-            <th mat-header-cell *matHeaderCellDef>Tên</th>
+            <th mat-header-cell *matHeaderCellDef>Tên đăng nhập</th>
             <td mat-cell *matCellDef="let element">{{element.userName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="contactNumber">
-            <th mat-header-cell *matHeaderCellDef>Tên</th>
+            <th mat-header-cell *matHeaderCellDef>Số điện thoại</th>
             <td mat-cell *matCellDef="let element">{{element.contactNumber}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef>Quyền</th>
+            <td mat-cell *matCellDef="let element">{{element.role}}</td>
         </ng-container>
 
         <ng-container matColumnDef="status">
