--- a/src/app/material-component/product/product.component.html
+++ b/src/app/material-component/product/product.component.html
@@ -31,6 +31,11 @@
             <td mat-cell *matCellDef="let element">{{element.description}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="createdDate">
+            <th mat-header-cell *matHeaderCellDef>Thời gian nhập sản phẩm</th>
+            <td mat-cell *matCellDef="let element">{{element.createdDate}}</td>
+        </ng-container>
+
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef>Giá tiền</th>
             <td mat-cell *matCellDef="let element">{{element.price}}</td>
