--- a/src/app/material-component/view-bill/view-bill.component.html
+++ b/src/app/material-component/view-bill/view-bill.component.html
@@ -29,6 +29,12 @@
             <td mat-cell *matCellDef="let element">{{element.contactNumber}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="createdDate">
+            <th mat-header-cell *matHeaderCellDef>Thời gian mua hàng</th>
+            <td mat-cell *matCellDef="let element">{{element.createdDate}}</td>
+        </ng-container>
+
+
         <ng-container matColumnDef="paymentMethod">
             <th mat-header-cell *matHeaderCellDef>Phương thức thanh toán</th>
             <td mat-cell *matCellDef="let element">{{element.paymentMethod}}</td>
