--- a/src/app/material-component/category/category.component.html
+++ b/src/app/material-component/category/category.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <b><span>Quản lý danh mục</span></b>
+    <b><span>Quản lý danh mục sản phẩm</span></b>
     <button mat-flat-button color="primary" class="float-right" (click)="handleAdd()">
         <mat-icon>
             add_circle
