--- a/src/app/material-component/dialog/view-bill-products/view-bill-products.component.html
+++ b/src/app/material-component/dialog/view-bill-products/view-bill-products.component.html
@@ -30,7 +30,7 @@
         </ng-container>
 
         <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef>Danh mục</th>
+            <th mat-header-cell *matHeaderCellDef>Danh mục sản phẩm</th>
             <td mat-cell *matCellDef="let element">{{element.category}}</td>
         </ng-container>
 
