--- a/src/app/dashboard_admin/dashboard.component.html
+++ b/src/app/dashboard_admin/dashboard.component.html
@@ -1,4 +1,4 @@
-<body>
+<!-- <body>
     <mat-card >
         <b><span>Trang thống kê</span></b>
     </mat-card>
@@ -86,4 +86,9 @@
             </div>
         </div>
     </div>
-</body>
+</body> -->
+<div style="width: 100%; display: flex;" >
+    <div style="width: 20%;">test</div>
+    <div style="width: 70%;"><chart [type]="type" [data]="data" [options]="options"></chart></div>
+</div>
+
