--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <b><span>Trang chủ</span></b>
+    <b><span>Thống kê sản phẩm và số lượng sản phẩm của cửa hàng</span></b>
 </mat-card>
 <div>
     <chart [type]="type" [data]="data" [options]="options"></chart>
