--- a/src/app/material-component/product/product.component.html
+++ b/src/app/material-component/product/product.component.html
@@ -36,6 +36,11 @@
             <td mat-cell *matCellDef="let element">{{element.createdDate}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="updateDate">
+            <th mat-header-cell *matHeaderCellDef>Thời gian cập nhập sản phẩm</th>
+            <td mat-cell *matCellDef="let element">{{element.updateDate}}</td>
+        </ng-container>
+
         <ng-container matColumnDef="quantity_product">
             <th mat-header-cell *matHeaderCellDef>Số lượng sản phẩm</th>
             <td mat-cell *matCellDef="let element">{{element.quantity_product}}</td>
